--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ h2.title {
 	text-transform: uppercase;
 }
 
-.webinar .webinar_date {
+.webinar .webinar_data {
 	margin-top: 15px;
 	/* font-family: Roboto; */
 	font-style: normal;
