--- a/project/Landing/css/style.css
+++ b/project/Landing/css/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 .promo {
-	height: 500px;
+	height: 800px;
 	background: url("../img/bg/main_bg.png") center center/cover no-repeat;
 	padding: 39px 0 62px 0;
 }
@@ -44,17 +44,8 @@ h2.title {
 	margin-top: 30px;
 }
 
-.btn {
-    display: inline-block; 
-    background: #800080;
-    color: #fff; 
-    padding: 1rem 1.5rem; 
-    text-decoration: none; 
-    border-radius: 3px; 
-   }
-
 .title {
-	color: #ffffff;
+	color: #f9bf3b;
 	/* font-family: "Roboto - Black"; */
 	font-size: 41px;
 	font-weight: 900;
@@ -145,6 +136,10 @@ h2.title {
 	text-align: center; 
 }
 
+.finish .finish_header{
+	color: #ffffff;
+}
+
 .waiting .waiting_header{
 	color: #252525;
 }
@@ -190,6 +185,141 @@ h2.title {
 	line-height: 21px;
 }
 
+.optimization {
+	min-height: 550px;
+	padding: 102px 0 107px 0;
+}
+
+.optimization .optimization_header {
+	margin-left: 391px;
+	color: #299cbd;
+	/* font-family: "Roboto - Black"; */
+	font-size: 29px;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.optimization .optimization_text {
+	margin-top: 25px;
+	margin-left: 391px;
+	color: #4a4a4a;
+	/* font-family: "Roboto Light"; */
+	font-size: 17px;
+	font-weight: 300;
+}
+
+.optimization .optimization_text span {
+	/* font-family: "Roboto - Bold"; */
+	font-weight: 700;
+}
+
+.optimization .optimization_img {
+	position: absolute;
+	top: -54px;
+	left: -240px;
+	z-index: -1;
+}
+
+.finish {
+	min-height: 447px;
+	padding: 86px 0 79px 0;
+	background: url(../img/bg/second_bg.png) center center/cover no-repeat;
+}
+
+.finish .finish_wrapper{
+	margin-top: 41px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.finish .finish_wrapper .finish_item{
+	width: 204px;
+}
+
+.finish .finish_wrapper .finish_item .finish_round{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	width: 115px;
+	height: 115px;
+	background-color: #b4e2ff;
+	border-radius: 100%;
+}
+
+.finish .finish_wrapper .finish_item .finish_descr{
+	margin-top: 25px;
+	text-align: center;
+	color: #efefef;
+	/* font-family: Roboto; */
+	font-size: 17px;
+	font-weight: 300;
+	line-height: 20px;
+}
+
+.gift {
+	min-height: 200px;
+	background-color: #EFEFEF;
+	padding: 10px 0;
+}
+
+.gift .gift_img {
+	display: block;
+	margin: 40px auto;
+}
+
+.gift .gift_text {
+	margin-top: 25px;
+	color: #4a4a4a;
+	/* font-family: "Roboto Light"; */
+	font-size: 17px;
+	font-weight: 300;
+	text-align: center;
+}
+
+.gift .gift_btn {
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.webinar {
+	min-height: 400px;
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+
+.webinar .webinar_img {
+	display: block;
+	margin: 40px auto;
+}
+
+.webinar .webinar_header {
+	margin-top: -15px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.webinar .webinar_data {
+	margin-top: 15px;
+	/* font-family: Roboto; */
+	font-style: normal;
+	font-weight: 900;
+	font-size: 36px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #299CBD;
+}
+
+.webinar .webinar_text {
+	margin-top: 15px;
+	/* font-family: Roboto; */
+	font-style: normal;
+	font-weight: normal;
+	font-size: 23px;
+	text-align: center;
+	color: #4A4A4A;
+}
+
 footer{
 	height: 169px;
 	background: #1A1A1A;
@@ -201,13 +331,13 @@ footer .footer_wrap {
 }
 
 footer .footer_link, footer .footer_text, footer .footer_link_divider {
-	margin-top: 55px;
+	margin-top: 70px;
 	/* font-family: Roboto; */
 	font-style: normal;
 	font-weight: 300;
 	font-size: 15px;
 	text-align: center;
-	color: #fff;
+	color: #888888;
 }
 
 footer .footer_text {
@@ -215,7 +345,7 @@ footer .footer_text {
 }
 
 footer .footer_link_divider {
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
 	font-weight: 800;
 }
